--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+	"postinstall": "ng build --prod"
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -12,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "11.1.1",
+	"@angular/cli": "11.1.2",
     "@angular/common": "11.1.1",
     "@angular/compiler": "11.1.1",
     "@angular/core": "11.1.1",
@@ -25,7 +27,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1101.2",
-    "@angular/cli": "11.1.2",
     "@angular/compiler-cli": "11.1.1",
     "@types/jasmine": "3.6.0",
     "@types/node": "12.11.1",
