--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
-	"postinstall": "ng build --prod"
+    "heroku-postbuild": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -13,7 +13,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "11.1.1",
-	"@angular/cli": "11.1.2",
     "@angular/common": "11.1.1",
     "@angular/compiler": "11.1.1",
     "@angular/core": "11.1.1",
@@ -21,12 +20,15 @@
     "@angular/platform-browser": "11.1.1",
     "@angular/platform-browser-dynamic": "11.1.1",
     "@angular/router": "11.1.1",
+    "express": "4.17.1",
+    "path": "0.12.7",
     "rxjs": "6.6.0",
     "tslib": "2.0.0",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1101.2",
+    "@angular/cli": "11.1.2",
     "@angular/compiler-cli": "11.1.1",
     "@types/jasmine": "3.6.0",
     "@types/node": "12.11.1",
@@ -42,5 +44,9 @@
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
     "typescript": "4.1.2"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
   }
 }
